[package]
name = "oblivion"
version = "1.0.0"
edition = "2021"
authors = ["Davi Bonetto <davi.bonetto100@gmail.com>"]
description = "LSM-Tree Key-Value Storage Engine"
license = "MIT"

[[bin]]
name = "oblivion"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
crc32fast = "1"
thiserror = "1"
bytes = "1"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
harness = false
